--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,18 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+@font-face{
+  font-family: "Poppins";
+  src:local("Poppins"),
+  url('../../public/Poppins/Poppins-Regular.ttf') format("truetype");
+}
 
 body { 
   user-select: none;
   font-family: 'Poppins', sans-serif;;
 }
-.font-main {
-  font-family: 'Chakra Petch', sans-serif;
-}
+
 
 @layer base {
   .text-main {
@@ -19,6 +22,8 @@ body {
   .bg-main {
     @apply bg-green-500
   }
+  .font-main {
+  }
 
 }
 .border-gradient {
@@ -27,6 +32,6 @@ body {
   border: 1px solid transparent;
 }
   .adjust {
-    @apply max-w-5xl mx-auto px-4 xl:px-0 py-14 
+    @apply max-w-5xl mx-auto px-4 xl:px-0 py-28
   }
   
